fixed issue with button resizing and x-overflow on mobile layout

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,7 +1,5 @@
 @import 'tailwindcss/base';
-
 @import 'tailwindcss/components';
-
 @import 'tailwindcss/utilities';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
@@ -19,9 +17,6 @@
   body {
     font-family: 'Montserrat', sans-serif;
   }
-}
-.hide {
-  display: none;
 }
 
 .attribution {
