--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,52 +544,36 @@ body {
   bottom: 0px;
 }
 
-.left-0{
-  left: 0px;
-}
-
-.right-0{
-  right: 0px;
-}
-
-.right-10{
-  right: 2.5rem;
-}
-
-.right-1{
-  right: 0.25rem;
-}
-
-.-right-1{
-  right: -0.25rem;
-}
-
-.-right-10{
-  right: -2.5rem;
-}
-
-.-top-1{
-  top: -0.25rem;
-}
-
-.-top-6{
-  top: -1.5rem;
-}
-
-.-right-52{
-  right: -13rem;
+.-right-56{
+  right: -14rem;
 }
 
 .-top-20{
   top: -5rem;
 }
 
-.-right-56{
-  right: -14rem;
+.left-0{
+  left: 0px;
+}
+
+.-top-12{
+  top: -3rem;
+}
+
+.-right-44{
+  right: -11rem;
+}
+
+.-right-52{
+  right: -13rem;
 }
 
 .-z-10{
   z-index: -10;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .m-1{
@@ -605,9 +589,9 @@ body {
   margin-right: auto;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-8{
@@ -615,24 +599,14 @@ body {
   margin-bottom: 2rem;
 }
 
-.my-12{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+.mx-9{
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
 }
 
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.my-5{
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+.mx-0{
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .mb-20{
@@ -649,6 +623,22 @@ body {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-11{
+  margin-top: 2.75rem;
+}
+
+.mt-14{
+  margin-top: 3.5rem;
 }
 
 .flex{
@@ -675,14 +665,6 @@ body {
   height: 1.5rem;
 }
 
-.h-0{
-  height: 0px;
-}
-
-.h-0\.5{
-  height: 0.125rem;
-}
-
 .h-px{
   height: 1px;
 }
@@ -707,6 +689,22 @@ body {
   width: 100%;
 }
 
+.w-screen{
+  width: 100vw;
+}
+
+.w-11{
+  width: 2.75rem;
+}
+
+.w-1{
+  width: 0.25rem;
+}
+
+.w-auto{
+  width: auto;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -729,6 +727,14 @@ body {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.overflow-x-auto{
+  overflow-x: auto;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -737,31 +743,18 @@ body {
   border-radius: 0.5rem;
 }
 
-.border-0{
-  border-width: 0px;
-}
-
 .border-t-0{
   border-top-width: 0px;
-}
-
-.border-b-0{
-  border-bottom-width: 0px;
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .bg-grayishBlue{
   --tw-bg-opacity: 1;
   background-color: hsl(var(--grayishBlue), var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -791,12 +784,26 @@ body {
   padding-bottom: 2rem;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-0{
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .pb-4{
   padding-bottom: 1rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .text-center{
@@ -811,6 +818,10 @@ body {
   font-size: 15px;
 }
 
+.text-button{
+  font-size: 0.813rem;
+}
+
 .text-h1{
   font-size: 2rem;
 }
@@ -821,14 +832,6 @@ body {
 
 .text-pricing{
   font-size: 4.5rem;
-}
-
-.text-button{
-  font-size: 0.813rem;
-}
-
-.tracking-\[\.25em\]{
-  letter-spacing: .25em;
 }
 
 .tracking-\[\.08em\]{
@@ -860,10 +863,6 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-100{
-  opacity: 1;
-}
-
 .opacity-25{
   opacity: 0.25;
 }
@@ -880,18 +879,9 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.drop-shadow-md{
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .drop-shadow-lg{
   --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.hide {
-  display: none;
 }
 
 .attribution {
@@ -930,9 +920,5 @@ body {
   .dark\:text-gray-100{
     --tw-text-opacity: 1;
     color: rgb(243 244 246 / var(--tw-text-opacity));
-  }
-
-  .dark\:opacity-50{
-    opacity: 0.5;
   }
 }
